Add simple script

--- a/source/app/views/user_script/show.js.erb
+++ b/source/app/views/user_script/show.js.erb
@@ -1,5 +1,13 @@
 // ==UserScript==
-// @match http://localhost:*/
+// @name         Paperboy loading script
+// @version      0.1
+// @description  Load and initialize paperboy scripts
+// @author       Fernando Darthjee Favini
+// @include      *
 // ==/UserScript==
 
-alert("works");
+(function() {
+  'use strict';
+
+  alert('hello <>');
+})();
