--- a/source/app/views/layouts/_header.html.erb
+++ b/source/app/views/layouts/_header.html.erb
@@ -16,7 +16,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item p-2">
-          <a href="#/" class="nav-link text-dark">New link</a>
+          <%= angular_safe_link_to(:websites, {}, class: 'nav-link text-dark') do %>
+            Websites
+          <% end %>
         </li>
       </ul>
       <ul class="nav navbar-nav">
