--- a/source/app/views/websites/_form.html.erb
+++ b/source/app/views/websites/_form.html.erb
@@ -8,7 +8,7 @@
     <%= form.input(:name, placeholder: "Website name") %>
     <%= form.input(:domain, placeholder: "www.domain.com") %>
     <%= form.input(:port, placeholder: "80") %>
-    <%= form.select(:port, options: Website::PROTOCOLS ) %>
+    <%= form.select(:protocol, options: Website::PROTOCOLS ) %>
 
     <div class="form-group row">
       <div class="offset-2 col-10">
