--- a/source/app/views/domain_scripts/index.json.erb
+++ b/source/app/views/domain_scripts/index.json.erb
@@ -1,5 +1,10 @@
 [
   {
-    "url": "<%= content_domain_script_url(id: 1, format: :js) %>"
+    "url": "<%= content_domain_script_url(id: 1, format: :js) %>",
+    "format": "url"
+  },
+  {
+    "url": "<%= content_domain_script_path(id: 2, format: :js) %>",
+    "format": "path"
   }
 ]
