--- a/source/app/views/scripts/index.html.erb
+++ b/source/app/views/scripts/index.html.erb
@@ -9,7 +9,8 @@
       <table class="table">
         <thead>
           <th scope="col">Name</th>
-          <th scope="col">External Url</th>
+          <th scope="col">Url</th>
+          <th scope="col">Format</th>
         </thead>
         <tbody>
           <tr>
@@ -25,7 +26,8 @@
                 {{script.name}}
               <% end %>
             </td>
-            <td>{{script.external_url}}</td>
+            <td>{{script.url}}</td>
+            <td>{{script.format}}</td>
           </tr>
         </tbody>
       </table>
