Add form for content

--- a/source/app/views/scripts/_form.html.erb
+++ b/source/app/views/scripts/_form.html.erb
@@ -7,6 +7,7 @@
   <div class="card-body">
     <%= form.input(:name, placeholder: "Script name") %>
     <%= form.input(:external_url, placeholder: "http://www.domain.com/script.js") %>
+    <%= form.textarea(:content, placeholder: "alert('hello world');") %>
 
     <div class="form-group row">
       <div class="offset-2 col-10">
