--- a/source/app/views/templates/display/_content.html.erb
+++ b/source/app/views/templates/display/_content.html.erb
@@ -1,6 +1,8 @@
 <div class="form-group row">
-  <div class="col-5">
+  <div class="col-12">
     <label for="<%= field %>" class="control-label"><%= label %></label>
   </div>
-  <div class="col-7">{{<%= ng_model %>}}</div>
+</div>
+<div class="form-group row">
+  <div class="col-12">{{<%= ng_model %>}}</div>
 </div>
