--- a/source/app/views/scripts/_form.html.erb
+++ b/source/app/views/scripts/_form.html.erb
@@ -11,12 +11,14 @@
 
     <div class="form-group row">
       <div class="offset-2 col-10">
-        <%= form.button(
-          ng_click: 'gnc.save()',
-          ng_disabled: 'gnc.ongoing',
-          classes: 'btn-primary',
-          text: 'Save'
-        ) %>
+        <%= form.only(:form) do
+          form.button(
+            ng_click: 'gnc.save()',
+            ng_disabled: 'gnc.ongoing',
+            classes: 'btn-primary',
+            text: 'Save'
+          )
+        end %>
       </div>
     </div>
   </div>
