--- a/source/app/views/templates/display/_link_button.html.erb
+++ b/source/app/views/templates/display/_link_button.html.erb
@@ -2,5 +2,5 @@
         ng-disabled="<%= ng_disabled %>"
         type"submit"
         class="btn <%= classes %>">
-        <%= text %> | <%= href %>
+        <%= text %> | (<%= href %>)
 </button>
