--- a/source/app/views/websites/_form.html.erb
+++ b/source/app/views/websites/_form.html.erb
@@ -20,6 +20,15 @@
             text: 'Save'
           )
         end %>
+        <%= form.only(:display) do
+          form.button(
+            ng_click: 'gnc.save()',
+            ng_disabled: 'gnc.ongoing',
+            classes: 'btn-primary',
+            href: angular_path_to(:edit_website, { id: "{{website.id}}" }),
+            text: 'Edit'
+          )
+        end %>
       </div>
     </div>
   </div>
