Fix link button template

--- a/source/app/views/templates/display/_link_button.html.erb
+++ b/source/app/views/templates/display/_link_button.html.erb
@@ -1,6 +1,9 @@
-<button ng-click="<%= ng_click %>"
-        ng-disabled="<%= ng_disabled %>"
-        type"submit"
-        class="btn <%= classes %>">
-        <%= text %> | (<%= href %>)
-</button>
+
+<a
+    href="<%= href %>"
+    ng-click="<%= ng_click %>"
+    ng-disabled="<%= ng_disabled %>"
+    type"submit"
+    class="btn btn-primary <%= classes %>">
+    <%= text %>
+</a>
