--- a/source/app/views/scripts/_form.html.erb
+++ b/source/app/views/scripts/_form.html.erb
@@ -7,15 +7,25 @@
   <div class="card-body">
     <%= form.input(:name, placeholder: "Script name") %>
     <%= form.input(:external_url, placeholder: "http://www.domain.com/script.js") %>
+    <%= form.textarea(:content, placeholder: "alert('hello world');") %>
 
     <div class="form-group row">
       <div class="offset-2 col-10">
-        <%= form.button(
-          ng_click: 'gnc.save()',
-          ng_disabled: 'gnc.ongoing',
-          classes: 'btn-primary',
-          text: 'Save'
-        ) %>
+        <%= form.only(:form) do
+          form.button(
+            ng_click: 'gnc.save()',
+            ng_disabled: 'gnc.ongoing',
+            classes: 'btn-primary',
+            text: 'Save'
+          )
+        end %>
+        <%= form.only(:display) do
+          form.button(
+            classes: 'btn-primary',
+            href: angular_path_to(:edit_script, { id: "{{gnc.data.id}}" }),
+            text: 'Edit'
+          )
+        end %>
       </div>
     </div>
   </div>
