--- a/source/app/views/websites/_form.html.erb
+++ b/source/app/views/websites/_form.html.erb
@@ -12,12 +12,21 @@
 
     <div class="form-group row">
       <div class="offset-2 col-10">
-        <%= form.button(
-          ng_click: 'gnc.save()',
-          ng_disabled: 'gnc.ongoing',
-          classes: 'btn-primary',
-          text: 'Save'
-        ) %>
+        <%= form.only(:form) do
+          form.button(
+            ng_click: 'gnc.save()',
+            ng_disabled: 'gnc.ongoing',
+            classes: 'btn-primary',
+            text: 'Save'
+          )
+        end %>
+        <%= form.only(:display) do
+          form.button(
+            classes: 'btn-primary',
+            href: angular_path_to(:edit_website, { id: "{{gnc.data.id}}" }),
+            text: 'Edit'
+          )
+        end %>
       </div>
     </div>
   </div>
