--- a/source/app/views/paperboy/show.js.erb
+++ b/source/app/views/paperboy/show.js.erb
@@ -28,7 +28,7 @@
         scripts = request.response;
 
       for (var index = 0; index < scripts.length; index ++) {
-        this.loadScript(scripts[index].url);
+        this.loadScript(scripts[index].script.url);
       }
     }
   }
