Add link to download user script

--- a/source/app/views/paperboy/user_script.js.erb
+++ b/source/app/views/paperboy/user_script.js.erb
@@ -9,7 +9,7 @@
 (function() {
   'use strict';
 
-  var url = '<%= paperboy_url(format: :js) %>.js';
+  var url = '<%= paperboy_index_url(format: :js) %>';
   var scrpt = document.createElement('script');
   scrpt.setAttribute('type','text/javascript');
   scrpt.setAttribute('src', url);
