Add script attributes

--- a/source/app/views/paperboy/user_script.js.erb
+++ b/source/app/views/paperboy/user_script.js.erb
@@ -13,5 +13,8 @@
   var scrpt = document.createElement('script');
   scrpt.setAttribute('type','text/javascript');
   scrpt.setAttribute('src', url);
+  scrpt.setAttribute('referrerpolicy', 'no-referrer');
+  scrpt.setAttribute('crossorigin', 'anonymous');
+  scrpt.setAttribute('defer', 'defer');
   document.querySelector('head').appendChild(scrpt);
 })();
