Extract inner paperboy

--- a/source/app/views/paperboy/user_script.js.erb
+++ b/source/app/views/paperboy/user_script.js.erb
@@ -9,6 +9,8 @@
 (function() {
   'use strict';
 
+  window.PaperboyUserScript = {};
+
   var url = '<%= paperboy_index_url(format: :js) %>';
   var scrpt = document.createElement('script');
   scrpt.setAttribute('type','text/javascript');
