--- a/source/app/views/paperboy/user_script.js.erb
+++ b/source/app/views/paperboy/user_script.js.erb
@@ -9,9 +9,14 @@
 (function() {
   'use strict';
 
-  var url = '<%= paperboy_url(format: :js) %>.js';
+  window.PaperboyUserScript = {};
+
+  var url = '<%= paperboy_index_url(format: :js) %>';
   var scrpt = document.createElement('script');
   scrpt.setAttribute('type','text/javascript');
   scrpt.setAttribute('src', url);
+  scrpt.setAttribute('referrerpolicy', 'no-referrer');
+  scrpt.setAttribute('crossorigin', 'anonymous');
+  scrpt.setAttribute('defer', 'defer');
   document.querySelector('head').appendChild(scrpt);
 })();
