--- a/source/app/views/home/show.html.erb
+++ b/source/app/views/home/show.html.erb
@@ -1,3 +1,3 @@
-<%= link_to(user_script_paperboy_index_path(format: :js)) do %>
+<%= link_to(user_script_path(format: :js)) do %>
   download user script
 <% end %>
