Add primary test for location

--- a/source/app/views/websites/user_script.js.erb
+++ b/source/app/views/websites/user_script.js.erb
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @name         <%= user_script.name %>
-// @include      <%= user_script.domain %>
+// @include      <%= user_script.location %>
 // ==/UserScript==
 
 (function() {
