Call html safe within wrapper

--- a/source/app/views/websites/user_script.js.erb
+++ b/source/app/views/websites/user_script.js.erb
@@ -7,6 +7,6 @@
   'use strict';
 
   <% user_script.scripts.each do |website_script| %>
-    <%= website_script.content.html_safe %>
+    <%= website_script.content %>
   <% end %>
 })();
