--- a/source/app/views/paperboy/show.js.erb
+++ b/source/app/views/paperboy/show.js.erb
@@ -1,5 +1,5 @@
-(function() {
-  <%= render partial: 'paperboy' %>
+<%= render partial: 'paperboy' %>
 
-  Paperboy.listScripts();
-})();
+(function(PaperboyUserScript) {
+  PaperboyUserScript.listScripts();
+})(window.PaperboyUserScript);
