--- a/source/app/views/paperboy/_paperboy.js.erb
+++ b/source/app/views/paperboy/_paperboy.js.erb
@@ -1,12 +1,12 @@
-var Paperboy = {
-  loadScript(url) {
+(function(PaperboyUserScript) {
+  PaperboyUserScript.loadScript = function(url) {
     var scrpt = document.createElement('script');
     scrpt.setAttribute('type','text/javascript');
     scrpt.setAttribute('src', url);
     document.querySelector('head').appendChild(scrpt);
-  },
+  };
 
-  listScripts(tag) {
+  PaperboyUserScript.listScripts = function(tag) {
     var localUrl = window.location.origin,
       request = new XMLHttpRequest(),
       url = '<%= website_scripts_url(format: :json, url: '--URL--') %>'
@@ -19,14 +19,14 @@ var Paperboy = {
       Paperboy.parseResponse(request);
     };
     request.send(null);
-  },
+  };
 
-  parseResponse(request) {
+  PaperboyUserScript.parseResponse(request) {
     var index,
       scripts = request.response;
 
     for (var index = 0; index < scripts.length; index ++) {
       this.loadScript(scripts[index].script.url);
     }
-  }
-}
+  };
+})(window.PaperboyUserScript)
