Fix method definition

--- a/source/app/views/paperboy/_paperboy.js.erb
+++ b/source/app/views/paperboy/_paperboy.js.erb
@@ -26,7 +26,7 @@
     request.send(null);
   };
 
-  PaperboyUserScript.parseResponse(request) {
+  PaperboyUserScript.parseResponse = function(request) {
     var index,
       scripts = request.response;
 
