--- a/source/app/views/websites/user_script.js.erb
+++ b/source/app/views/websites/user_script.js.erb
@@ -3,8 +3,16 @@
 // @include      <%= user_script_wrapper.location %>
 // ==/UserScript==
 
+(function(PaperboyUserScript, undefined) {
+  if (PaperboyUserScript === undefined) {
+    window.PaperboyUserScript = {};
+  }
+})(window.PaperboyUserScript);
+
 (function() {
   'use strict';
+
+  <%= render partial: 'paperboy/path_parser' %>
 
   <% user_script_wrapper.scripts.each do |website_script| %>
     <%= website_script.content %>
