Render scripts with path check

--- a/source/app/views/paperboy/_path_parser.js.erb
+++ b/source/app/views/paperboy/_path_parser.js.erb
@@ -7,3 +7,9 @@ var PathParser = {
 PaperboyUserScript.match = function(path) {
   return PathParser.match(path);
 }
+
+PaperboyUserScript.checkAndRun = function(path, func) {
+  if (PathParser.match(path)) {
+    func.call()
+  }
+};
