--- a/source/app/views/websites/user_script.js.erb
+++ b/source/app/views/websites/user_script.js.erb
@@ -15,6 +15,8 @@
   <%= render partial: 'paperboy/path_parser' %>
 
   <% user_script_wrapper.scripts.each do |website_script| %>
-    <%= website_script.content %>
+    PaperboyUserScript.checkAndRun(<%= website_script.path.to_json %>, function() {
+      <%= website_script.content %>
+    });
   <% end %>
 })();
