--- a/source/app/views/paperboy/_path_parser.js.erb
+++ b/source/app/views/paperboy/_path_parser.js.erb
@@ -1,6 +1,10 @@
 var PathParser = {
   match(path) {
-    return true;
+    if (!path) {
+      return true
+    }
+
+    return window.location.href == path;
   }
 };
 
