--- a/source/app/views/layouts/_header.html.erb
+++ b/source/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="flex-column align-items-center bg-light border-bottom shadow-sm" ng-controller="Global.HeaderController as headerController">
   <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <a class="navbar-brand" href="#/">
-      Stalchild
+      Paperboy
     </a>
     <button class="navbar-toggler"
             type="button"
@@ -16,13 +16,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item p-2">
-          <a class="nav-link" href="#">First Link</a>
+          <%= angular_safe_link_to(:websites, {}, class: 'nav-link text-dark') do %>
+            Websites
+          <% end %>
+        </li>
+        <li class="nav-item p-2">
+          <%= angular_safe_link_to(:scripts, {}, class: 'nav-link text-dark') do %>
+            Scripts
+          <% end %>
         </li>
       </ul>
       <ul class="nav navbar-nav">
         <li ng-hide="headerController.logged">
           <a
-            class="nav-link"
             ng-hide="headerController.ongoing"
             data-toggle="modal"
             href="#"
@@ -32,7 +38,6 @@
         </li>
         <li ng-show="headerController.logged">
           <a
-            class="nav-link"
             ng-hide="headerController.ongoing"
             data-toggle="modal"
             href="#"
