--- a/source/app/views/layouts/application.html.erb
+++ b/source/app/views/layouts/application.html.erb
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title><%= Settings.title %></title>
-    <link rel="icon" type="image/png" href="<%= Settings.favicon %>">
+    <title>MyTitle</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
     <%= csrf_meta_tags %>
   </head>
-  <body ng-app="stalchild">
+  <body ng-app="paperboy">
 
     <%= render 'layouts/header' %>
     <%= render 'layouts/login' %>
 
-    <div class="container-fluid" ng-view>
+    <div class="container" ng-view>
       <%= yield %>
     </div>
 
