--- a/source/app/views/paperboy/show.js.erb
+++ b/source/app/views/paperboy/show.js.erb
@@ -1,6 +1,7 @@
 (function(window) {
   window.PaperboyUserScript = {};
 
+  <%= render partial: 'matchers' %>
   <%= render partial: 'website_script_parser' %>
   <%= render partial: 'paperboy' %>
 
