--- a/source/app/views/websites/user_script.js.erb
+++ b/source/app/views/websites/user_script.js.erb
@@ -12,7 +12,7 @@
 (function() {
   'use strict';
 
-  <%= render partial: 'paperboy/path_parser' %>
+  <%= render partial: 'paperboy/matchers' %>
   <%= render partial: 'paperboy/script_loader' %>
 
   <% user_script_wrapper.scripts.each do |website_script| %>
