--- a/source/app/views/paperboy/show.js.erb
+++ b/source/app/views/paperboy/show.js.erb
@@ -1,5 +1,11 @@
-(function() {
+(function(window) {
+  window.PaperboyUserScript = {};
+
+  <%= render partial: 'matchers' %>
+  <%= render partial: 'website_script_parser' %>
   <%= render partial: 'paperboy' %>
 
-  Paperboy.listScripts();
-})();
+  PaperboyUserScript.scripts_url = '<%= website_scripts_url(format: :json, url: '--URL--') %>'
+
+  PaperboyUserScript.listScripts();
+})(window);
