--- a/source/app/views/websites/user_script.js.erb
+++ b/source/app/views/websites/user_script.js.erb
@@ -1,6 +1,7 @@
 // ==UserScript==
 // @name         <%= user_script_wrapper.name %>
 // @include      <%= user_script_wrapper.location %>
+// @match        <%= user_script_wrapper.location %>
 // ==/UserScript==
 
 (function(PaperboyUserScript, undefined) {
