--- a/source/app/views/layouts/_header.html.erb
+++ b/source/app/views/layouts/_header.html.erb
@@ -14,18 +14,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item p-2">
-          <%= angular_safe_link_to(:websites, {}, class: 'nav-link text-dark') do %>
-            Websites
-          <% end %>
-        </li>
-        <li class="nav-item p-2">
-          <%= angular_safe_link_to(:scripts, {}, class: 'nav-link text-dark') do %>
-            Scripts
-          <% end %>
-        </li>
-      </ul>
+      <%= render 'layouts/header_links' %>
       <ul class="nav navbar-nav">
         <li ng-hide="headerController.logged">
           <a
