Move login links

--- a/source/app/views/layouts/_header_links.html.erb
+++ b/source/app/views/layouts/_header_links.html.erb
@@ -14,4 +14,24 @@
       User Script
     <% end %>
   </li>
+  <li ng-hide="headerController.logged" class="nav-item p-2">
+    <a
+      ng-hide="headerController.ongoing"
+      data-toggle="modal"
+      href="#"
+      class="nav-link text-dark"
+      data-target="#login-modal">
+      Login
+    </a>
+  </li>
+  <li ng-show="headerController.logged"  class="nav-item p-2">
+    <a
+      ng-hide="headerController.ongoing"
+      data-toggle="modal"
+      href="#"
+      class="nav-link text-dark"
+      ng-click="headerController.logoff()">
+      Logoff
+    </a>
+  </li>
 </ul>
