--- a/source/app/views/layouts/_header_links.html.erb
+++ b/source/app/views/layouts/_header_links.html.erb
@@ -11,7 +11,7 @@
   </li>
   <li class="nav-item p-2">
     <%= link_to(user_script_path(format: 'js'), class: 'nav-link text-dark') do %>
-      User Script
+      Download User Script
     <% end %>
   </li>
   <li ng-hide="headerController.logged" class="nav-item p-2">
