--- a/source/app/views/layouts/_header.html.erb
+++ b/source/app/views/layouts/_header.html.erb
@@ -14,38 +14,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item p-2">
-          <%= angular_safe_link_to(:websites, {}, class: 'nav-link text-dark') do %>
-            Websites
-          <% end %>
-        </li>
-        <li class="nav-item p-2">
-          <%= angular_safe_link_to(:scripts, {}, class: 'nav-link text-dark') do %>
-            Scripts
-          <% end %>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li ng-hide="headerController.logged">
-          <a
-            ng-hide="headerController.ongoing"
-            data-toggle="modal"
-            href="#"
-            data-target="#login-modal">
-            Login
-          </a>
-        </li>
-        <li ng-show="headerController.logged">
-          <a
-            ng-hide="headerController.ongoing"
-            data-toggle="modal"
-            href="#"
-            ng-click="headerController.logoff()">
-            Logoff
-          </a>
-        </li>
-      </ul>
+      <%= render 'layouts/header_links' %>
     </div>
   </nav>
 </div>
