--- a/source/app/views/scripts/_websites.erb
+++ b/source/app/views/scripts/_websites.erb
@@ -19,7 +19,7 @@
           <td>
             {{website.website.name}}
           </td>
-          <td>{{website.website.matcher}}</td>
+          <td>{{website.location}}</td>
         </tr>
       </tbody>
     </table>
