--- a/source/app/views/scripts/_websites.erb
+++ b/source/app/views/scripts/_websites.erb
@@ -1,4 +1,4 @@
-<div class="card shadow-sm" ng-controller="Scripts.WebsitesController as swc">
+<div class="card shadow-sm">
   <div class="card-header">
     <h4 class="my-0 font-weight-normal">
       Websites
