--- a/source/app/views/scripts/edit.html.erb
+++ b/source/app/views/scripts/edit.html.erb
@@ -4,4 +4,8 @@
   <% end %>
 </form>
 
-<%= render partial: 'websites' %>
+<div ng-controller="Scripts.WebsitesController as swc">
+  <% magicka_form('swc.data') do |form| %>
+    <%= render partial: 'websites', locals: { form: form } %>
+  <% end %>
+</div>
